--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,6 @@
 
 S3method(plot,mvnpdf)
 export(mvnpdf)
+importFrom(Rcpp,sourceCpp)
 importFrom(graphics,plot)
+useDynLib(mypkgr, .registration = TRUE)
