--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ Imports:
 LinkingTo: 
     Rcpp,
     RcppArmadillo
+URL: https://github.com/Florian-40/mypkgr
+BugReports: https://github.com/Florian-40/mypkgr/issues
