--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,8 @@ export(mvnpdfoptim)
 export(mvnpdfsmart)
 import(foreach)
 importFrom(Rcpp,sourceCpp)
+importFrom(doParallel,registerDoParallel)
 importFrom(graphics,plot)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
 useDynLib(mypkgr, .registration = TRUE)
